# PRACTICE_2025

./: .gitmodules  CMakeLists.txt  Dockerfile  deployment.yaml  hpa.yaml  main.cpp  service.yaml
.github/workflows/: main.yaml
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  drogon_api_tests  main
build_tests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tests/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_tests/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: test_main.cpp
